--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ results/
 __pycache__/
 
 results_old/
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
